--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>                                                                                                                                                              
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New Project DK</title>
+    <title>Projeto tema claro e escuro</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body class="light-theme">
@@ -18,7 +18,7 @@
             <button class="btn">Escuro</button>
         </div>
         <script src="app.js"></script>
-        <noscript>Você precisa seguir o @dkzinn98 no instagram.com</noscript>
+        <noscript>Você precisa seguir o @dkode.js no instagram.com</noscript>
         
 </body>
 </html>
